--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -15,10 +15,10 @@ layout: default
   <!-- THIS SECTION NEEDS TO ACTUALLY BE WRITTEN UP WITH WORKING LINKS-->
   <section class="links">
     <ul>
-      <li><a href="http://darrenyao.com/math.html">Math</a></li>
-      <li><a href="http://darrenyao.com/robotics.html">Robotics</a></li>
+      <li><a href="{{site.baseurl}}/pages/math">Math</a></li>
+      <li><a href="{{site.baseurl}}/pages/robotics">Robotics</a></li>
       <li><a href="https://ch.tetr.io/u/tlfe">TETR.IO</a></li>
-      <li><a href="http://darrenyao.com/tutoring.html">Tutoring</a></li>  
+      <li><a href="{{site.baseurl}}/pages/tutoring">Tutoring</a></li>  
       <li><a href="https://darrenyao.com/usacobook/java.pdf">USACO Book, Java</a></li>
       <li><a href="https://darrenyao.com/usacobook/cpp.pdf">USACO Book, C++</a></li>
     </ul>
