--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -50,7 +50,7 @@ layout: default
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
-      <p>{{site.time | date: '%Y'}} &copy; {{site.author}}</p>
+      <p>{{site.time | date: '%Y'}} <!--&copy;--> </p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
